# pract_sem_5

./: .gitignore  5_correct_res  A_MAX  CMakeLists.txt  Makefile  README.md  algo.cpp  algo.h  main.cpp  results
